tests/machine/x/cobol/json_builtin.cob
*> Generated by Mochi compiler v0.10.26 on 2025-07-16T15:32:15Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. JSON-BUILTIN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 M.
           05 A PIC 9 VALUE 1.
           05 B PIC 9 VALUE 2.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       PERFORM FN_JSON USING M
       FN_JSON_RES
       STOP RUN.
